force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__DisableAddToCartForOptionProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisableAddToCartForOptionProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether 'Add to Cart' and 'Configure' button should be hidden for option products on catalog page.</description>
    <inlineHelpText>A global setting to hide 'Add to Cart' and 'Configure' button for option products on catalog page.</inlineHelpText>
    <label>Disable Add To Cart for Option Products</label>
    <type>Checkbox</type>
</CustomField>