force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__FavoritesDisplayLabel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FavoritesDisplayLabel__c</fullName>
    <description>Label for the Favorites (e.g Quick Buys, Pre-defined Solutions, Saved Configurations, Templates, etc..). If empty, it would default to "Favorites"</description>
    <inlineHelpText>Label for the Favorites (e.g Quick Buys, Pre-defined Solutions, Saved Configurations, Templates, etc..). If empty, it would default to "Favorites"</inlineHelpText>
    <label>Favorites Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>