force-app/main/default/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c/fields/Apttus_Config2__HideConfigureAction__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideConfigureAction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the "Configure" action should be hidden in the page.</description>
    <inlineHelpText>Indicates whether the "Configure" action should be hidden in the page.</inlineHelpText>
    <label>Hide Configure Action</label>
    <type>Checkbox</type>
</CustomField>